--- a/src/common-components/ButtonWrapper.css
+++ b/src/common-components/ButtonWrapper.css
@@ -10,6 +10,7 @@
   filter: brightness(1) drop-shadow(0 4px 8px rgba(0, 0, 0, 0.2));
   user-select: none;
   -webkit-tap-highlight-color: transparent;
+  font: inherit;
 }
 
 .button-wrapper:hover {
