Fix ship image + button to center

--- a/src/common-components/ButtonWrapper.css
+++ b/src/common-components/ButtonWrapper.css
@@ -12,7 +12,7 @@
   -webkit-tap-highlight-color: transparent;
   font: inherit;
   /* Remove fixed width - let it be sized by grid parent */
-  display: block;
+  display: inline-block;
 }
 
 .button-wrapper:hover {
