--- a/src/page-oc-list/OcSlot.css
+++ b/src/page-oc-list/OcSlot.css
@@ -29,7 +29,7 @@
 }
 
 .ship-icon-image {
-  font-size: 28px; /* 20% of 140px (mobile width) */
+  font-size: 35px; /* 25% of 140px (mobile width) - 1.25x bigger */
 }
 
 .ship-icon-outline {
@@ -87,7 +87,7 @@ h3 {
   }
 
   .ship-icon-image {
-    font-size: 28px; /* 20% of 140px */
+    font-size: 35px; /* 25% of 140px - 1.25x bigger */
   }
 }
 
@@ -107,7 +107,7 @@ h3 {
   }
 
   .ship-icon-image {
-    font-size: 40px; /* 20% of 200px */
+    font-size: 50px; /* 25% of 200px - 1.25x bigger */
   }
 }
 
@@ -122,8 +122,8 @@ h3 {
 
   .ship-icon-image {
     font-size: max(
-      36px,
-      3vw
-    ); /* 20% of slot width (15vw), min 36px (20% of 180px) */
+      45px,
+      3.75vw
+    ); /* 25% of slot width (15vw), min 45px (25% of 180px) - 1.25x bigger */
   }
 }
