--- a/src/index.css
+++ b/src/index.css
@@ -55,6 +55,12 @@
   background-color: rgba(106, 255, 168, 0.6);
 }
 
+.button-3d-with-shadow {
+  box-shadow: 0px 4px 0px rgb(52, 11, 86), 4px 4px 0px rgb(52, 11, 86),
+    0 0 20px rgba(52, 11, 86, 0.6);
+  border-radius: 4px;
+}
+
 .shadow-3d {
   box-shadow: 0px 4px 0px rgb(52, 11, 86), 4px 4px 0px rgb(52, 11, 86),
     0 0 20px rgba(52, 11, 86, 0.6);
