--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,8 @@
 /* Common button styles */
 .button-with-underline {
   border: 2px solid black;
-  box-shadow: 4px 4px 0px black;
+  box-shadow: 0px 4px 0px rgb(52, 11, 86), 4px 4px 0px rgb(52, 11, 86),
+    0 0 20px rgba(52, 11, 86, 0.6);
   padding: 0.5rem 1rem;
   cursor: pointer;
   transition: all 0.2s ease-in-out;
